--- a/index.html
+++ b/index.html
@@ -11,7 +11,23 @@
     <title>My Project</title>
 </head>
 <body>
-    <h1>Project Starter</h1>
+    <div class="container">
+        <div class="panel active" style="background-image: url('https://images.unsplash.com/photo-1597848212624-a19eb35e2651?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8c3VuZmxvd2VyfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=60')">
+            <h3>Sunflower</h3>
+        </div>
+        <div class="panel active"
+            style="background-image: url('https://images.unsplash.com/photo-1497321697169-1ca9f1c8a253?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8ZGFpc3l8ZW58MHx8MHx8&auto=format&fit=crop&w=800&q=60')">
+            <h3>Daisy</h3>
+        </div>
+        <div class="panel active"
+            style="background-image: url('https://images.unsplash.com/photo-1520763185298-1b434c919102?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dHVsaXB8ZW58MHx8MHx8&auto=format&fit=crop&w=800&q=60')">
+            <h3>Tulip</h3>
+        </div>
+        <div class="panel active"
+            style="background-image: url('https://media.istockphoto.com/photos/dahlia-is-called-orange-garden-picture-id512882246?b=1&k=20&m=512882246&s=170667a&w=0&h=QqxVjZIukAlZx0-qMZPL71p1XaPKenyL7NF6TYZm0Iw=')">
+            <h3>Dahlia</h3>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
