--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             style="background-image: url('https://media.istockphoto.com/photos/dahlia-is-called-orange-garden-picture-id512882246?b=1&k=20&m=512882246&s=170667a&w=0&h=QqxVjZIukAlZx0-qMZPL71p1XaPKenyL7NF6TYZm0Iw=')">
             <h3>Dahlia</h3>
         </div>
+        <div class="panel active"
+            style="background-image: url('https://images.unsplash.com/photo-1561897519-6e4fbd1fbc41?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8bGlseXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=900&q=60')">
+            <h3>Lily</h3>
+        </div>
     </div>
 
     <script src="script.js"></script>
