Added HTML to index.html

--- a/index.html
+++ b/index.html
@@ -4,14 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
-    <title>My Project</title>
+    <title>Rotating Navigation</title>
 </head>
 <body>
-    <h1>Project Starter</h1>
+    <div class="container">
+        <div class="circle-container">
+            <div class="circle">
+                <button id="close">
+                    <i class="fas fa-times"></i>
+                </button>
+                <button id="open">
+                    <i class="fas fa-bars"></i>
+                </button>
+            </div>
+        </div>
+
+        <div class="content">
+            <h1>Amazing Article</h1>
+            <small>Florin Pop</small>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta veritatis reprehenderit rem dignissimos placeat quisquam commodi impedit magnam laborum ut asperiores qui exercitationem consequatur quo beatae, libero reiciendis iste incidunt sunt ipsum doloribus. Sint optio illum blanditiis ducimus cupiditate, minus laboriosam rem aliquam similique, sunt commodi illo molestiae asperiores iusto! Fugiat illo delectus architecto eius unde quia iste consequatur, rerum molestias mollitia beatae totam voluptatibus, nemo itaque sed velit voluptate assumenda illum excepturi magni libero vel recusandae. Pariatur iste obcaecati eius explicabo saepe ratione dolores alias voluptatibus ex labore exercitationem quis rerum inventore modi voluptates, nobis fuga voluptatem, dolorum sequi.</p>
+
+            <h3>My Dog</h3>
+            <img src="https://media.istockphoto.com/photos/funny-west-highland-white-terrier-dog-decorated-with-photo-props-sits-picture-id1292884801?b=1&k=20&m=1292884801&s=170667a&w=0&h=L5QgEFpFN1be2Qx8Q9PUWolafU_ecaqYiNwga6eoqxs=" alt="doggy">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut maxime, earum ipsa, tempore quam totam deserunt quod tenetur eos distinctio deleniti, et sint minus? Quas voluptates alias eum deleniti beatae, deserunt quam quaerat ratione! Modi fugiat suscipit quae sequi. Neque molestiae aut, ipsa exercitationem asperiores excepturi ex unde repudiandae id eligendi. Quidem mollitia, molestiae doloremque quos deleniti numquam voluptatibus, sit delectus id dolorum quas perspiciatis esse reprehenderit quo fugiat facilis cumque, harum veritatis aliquid maxime.</p>
+        </div>
+
+        <nav>
+            <ul>
+                <li><i class="fas fa-home"></i>Home</li>
+                <li><i class="fas fa-user-alt"></i>About</li>
+                <li><i class="fas fa-envelope"></i>Contact</li>
+            </ul>
+        </nav>
+    </div>
 
     <script src="script.js"></script>
 </body>
